--- a/vite-frontend/vercel.json
+++ b/vite-frontend/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "src/**/*",
+      "src": "vite.config.js",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
@@ -10,7 +10,7 @@
   ],
   "routes": [
     {
-      "src": "src/(.*)",
+      "src": "/(.*)",
       "dest": "/index.html"
     }
   ]
