--- a/vite-frontend/package.json
+++ b/vite-frontend/package.json
@@ -15,7 +15,8 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
