--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -24,11 +24,13 @@ jobs:
       # 3. Install dependencies
       - name: Install
         run: npm install
+        working-directory: vite-frontend
         # or: yarn install
 
       # 4. Build your project (optional if you have a build step)
       - name: Build
         run: npm run build
+        working-directory: vite-frontend
         # or: yarn build
 
       # 5. Deploy to Firebase
