--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: vite-frontend
+      - name: pwd and list
+        run: pwd
+              ls -ls
 
       # 2. Set up Node
       - name: Use Node
