--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -15,6 +15,12 @@ jobs:
      
       - name: Change to vite-frontend directory
         run: cd vite-frontend
+
+      - name: Show current directory and list files
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Files in directory:"
+          ls -la
         
       # 2. Set up Node
       - name: Use Node
