--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
      
       - name: Change to vite-frontend directory
-        run: cd vite-frontend
+        run: cd ./vite-frontend
 
       - name: Show current directory and list files
         run: |
