--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -15,6 +15,11 @@ jobs:
      
       - name: Change to vite-frontend directory
         run: cd ./vite-frontend
+        |
+          echo "Current directory: $(pwd)"
+          echo "Files in directory:"
+          ls -la
+      
 
       - name: Show current directory and list files
         run: |
