--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -31,6 +31,11 @@ jobs:
       - name: Install
         working-directory: ./vite-frontend
         run: npm install
+        
+      # Install Firebase CLI
+      - name: Install Firebase CLI
+        working-directory: ./vite-frontend
+        run: npm install -g firebase-tools
 
       # 5. Build your project (optional if you have a build step)
       - name: Build
