--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -45,6 +45,6 @@ jobs:
       # 6. Deploy to Firebase
       - name: Deploy to Firebase
         working-directory: ./vite-frontend
-        run: npx firebase deploy --only hosting, functions 
+        run: npx firebase deploy 
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
