--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -27,24 +27,34 @@ jobs:
         with:
           node-version: '20'
 
-      # 4. Install dependencies
+      # 4. Install dependencies for main app
       - name: Install
         working-directory: ./vite-frontend
         run: npm install
         
-      # Install Firebase CLI
+      # 5. Install Firebase CLI
       - name: Install Firebase CLI
         working-directory: ./vite-frontend
         run: npm install -g firebase-tools
 
-      # 5. Build your project (optional if you have a build step)
+      # 6. Build your main project
       - name: Build
         working-directory: ./vite-frontend
         run: npm run build
+        
+      # 7. Install dependencies for functions
+      - name: Install Functions Dependencies
+        working-directory: ./vite-frontend/functions
+        run: npm install
+        
+      # 8. Build functions
+      - name: Build Functions
+        working-directory: ./vite-frontend/functions
+        run: npm run build
 
-      # 6. Deploy to Firebase
+      # 9. Deploy to Firebase (both hosting and functions)
       - name: Deploy to Firebase
         working-directory: ./vite-frontend
-        run: npx firebase deploy 
+        run: npx firebase deploy --only hosting,functions
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
